--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+#spring.data.mongodb.uri=mongodb://longpc:longpc%40mongo@192.168.1.4:27017/quiz?authSource=admin
 spring.data.mongodb.uri=mongodb://longpc:longpc%40mongo@mongodb:27017/quiz?authSource=admin
+#spring.data.mongodb.uri=mongodb://localhost:27017/quiz?authSource=admin
+
 server.port=8080
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
