--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.data.mongodb.uri=mongodb://longpc:longpc%40mongo@192.168.1.4:27017/quiz?authSource=admin
-spring.data.mongodb.uri=mongodb://longpc:longpc%40mongo@mongodb:27017/quiz?authSource=admin
+spring.data.mongodb.uri=mongodb://longpc:longpc%40mongo@192.168.1.4:27017/quiz?authSource=admin
+#spring.data.mongodb.uri=mongodb://longpc:longpc%40mongo@mongodb:27017/quiz?authSource=admin
 #spring.data.mongodb.uri=mongodb://localhost:27017/quiz?authSource=admin
 
 server.port=8080
