--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 spring.servlet.multipart.max-request-size=200MB
-fe.host.survey=https://survey.longpc.site
+fe.host.survey=https://danhgiacamquan.online
